tests/Tree/negative/test008.jvt
-- closure call: wrong number of arguments

function f(x : *) : * {
  x
}

function main() : * {
  call(calloc[f](), 10, 11)
}
